@@ -1,5 +1,8 @@
 CHANGELOG
 
+July 7th, 2010
+  - Added some better error checking with XML results. An array will not be returned with errors if there is any.
+
 June 30th, 2010
   - Added SSL support options
   - Added lib/cacert.pem to verify Shopify SSL certificates
